# ExaminationTimetabling

./: AlocaSalas.cpp  AlocaSalas.h  Arquivo.cpp  Arquivo.h  Busca_Solucoes.cpp  CMakeLists.txt  Exame.cpp  Exame.h  Gerador_Horarios.cpp  Lista_Exames.cpp  Lista_Exames.h  Lista_alunos.cpp  Lista_alunos.h  Periodo.cpp  Periodo.h  Pesos.cpp  Pesos.h  Relatório Final de Iniciação Cientifica.doc  Salas.cpp  Salas.h  StrUtil.cpp  StrUtil.hpp  Tabela_Exames.cpp  Tabela_Exames.h  lp.cpp  lp.h  main.cpp  run.sh  runExp.sh
instances/: dataset1.exam
